<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_material"
        android:title="@string/action_search"

        app:showAsAction="ifRoom"  />

    <item android:id="@+id/action_run_asynch"
        android:title="@string/action_asych"
        app:showAsAction="always"  />

    <item android:id="@+id/action_aussie"
        android:title="@string/action_aussie"
        app:showAsAction="always"  />

    <item android:id="@+id/action_us_news"
        android:title="@string/title_activity_us__news"
        app:showAsAction="always"  />
    <item android:id="@+id/action_ny_news"
        android:title="@string/title_activity_ny__news_"
        app:showAsAction="always"  />
</menu>
